Changed some parameters, changed some depricated functions